# MLX-Agent

./: .env.example  .gitignore  ARCHIVE.md  ARCHIVE_FINAL.md  CHANGELOG.md  LICENSE  MIGRATION_PLAN.md  QUICKSTART.md  README.md  TEST_REPORT.md  demo_phase2.py  pyproject.toml  requirements.txt  test_chat.py  test_full_conversation.py  test_mlx_agent.py  test_self_awareness.py  test_tools.py
backups/: backups.json
config/: apis.yaml  config.yaml  config.yaml.example
data/api_keys/: .api_master_key
data/briefing/: history.json
docs/: MIGRATION_OPENCLOWSKILLS.md  PHASE1_OPTIMIZATION.md  PLUGIN_GUIDE.md
memory/archive/: 2026-02-13.md
memory/core/: identity.md  soul.md
memory/session/: 2026-02-13.md
mlx_agent/: __init__.py  __main__.py  agent.py  api_manager.py  chat.py  cli.py  compression.py  config.py  health.py  identity.py  llm.py
mlx_agent/memory/: __init__.py  base.py  chroma.py  consolidation.py  embedding.py  hybrid.py  sqlite.py  tiered.py  vector_db.py
mlx_agent/plugins/: __init__.py  base.py
mlx_agent/plugins/anilist/: __init__.py
mlx_agent/plugins/api_manager/: __init__.py  plugin.py  storage.py
mlx_agent/plugins/backup/: __init__.py  plugin.py  scheduler.py
mlx_agent/plugins/bilibili/: __init__.py
mlx_agent/plugins/briefing/: __init__.py  plugin.py  weather.py
mlx_agent/plugins/cron/: __init__.py  plugin.py
mlx_agent/plugins/excel/: __init__.py
mlx_agent/plugins/image_recognition/: __init__.py  plugin.py
mlx_agent/plugins/pdf/: __init__.py
mlx_agent/plugins/pixiv/: __init__.py
mlx_agent/plugins/remindme/: __init__.py  parser.py  plugin.py  scheduler.py
mlx_agent/plugins/subagent/: __init__.py  plugin.py
mlx_agent/plugins/telegram_sender/: __init__.py  plugin.py
mlx_agent/reactions/: __init__.py  engine.py  telegram.py
mlx_agent/skills/: __init__.py  manager.py  plugin.py
mlx_agent/skills/compat/: openclaw.py
mlx_agent/skills/native/: base.py
mlx_agent/subagent/: __init__.py  core.py  manager.py  pool.py
mlx_agent/tasks/: __init__.py  base.py  executor.py  queue.py  worker.py
mlx_agent/tools/: __init__.py  base.py  browser.py  code.py  file.py  http.py  search.py  system.py
plugins/: demo.py  search_plugin.py
scripts/: build_single_file.py  install.sh  migrate_memory.py  test.sh  test_memory.py
systemd/: mlx-agent.service
tests/: test_features.py  test_hybrid_basic.py  test_hybrid_memory.py  test_optimization.py  test_phase1_optimization.py  test_structure.py
